[tool.poetry]
name = "pyflower"
version = "0.1.0"
description = ""
authors = ["navhits <naveen.sunilkumar@freshworks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pychunk = {git = "https://github.com/bhavaniravi/pychunk.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
